--- a/index.html
+++ b/index.html
@@ -170,56 +170,56 @@
         <p>
             How to set an alarm 10 minutes from now?
         </p>
-        <pre>            // https://example.com/serviceworker.js
-            this.ontask = function(task) {
-                alert(task.data.message);
-                console.log("Task scheduled at: " + new Date(task.time));
-                // From here on we can write the data to IndexedDB, send it to any open windows,
-                // display a notification, etc.
-            }
+        <pre>    // https://example.com/serviceworker.js
+    this.ontask = function(task) {
+        alert(task.data.message);
+        console.log("Task scheduled at: " + new Date(task.time));
+        // From here on we can write the data to IndexedDB, send it to any open windows,
+        // display a notification, etc.
+    }
 
-            // https://example.com/webapp.js
-            function onTaskAdded(task) {
-                console.log("Task successfully scheduled.");
-            }
+    // https://example.com/webapp.js
+    function onTaskAdded(task) {
+        console.log("Task successfully scheduled.");
+    }
 
-            function onError(error) {
-                alert("Sorry, couldn't set the alarm: " + error);
-            }
+    function onError(error) {
+        alert("Sorry, couldn't set the alarm: " + error);
+    }
 
-            navigator.serviceWorker.ready.then(function(serviceWorkerRegistration) {
-                serviceWorkerRegistration.taskScheduler.add(Date.now() + (10 * 60000), {
-                    message: "It's been 10 minutes, your soup is ready!"
-                }).then(onTaskAdded, onError);
-            });
+    navigator.serviceWorker.ready.then(function(serviceWorkerRegistration) {
+        serviceWorkerRegistration.taskScheduler.add(Date.now() + (10 * 60000), {
+            message: "It's been 10 minutes, your soup is ready!"
+        }).then(onTaskAdded, onError);
+    });
         </pre>
 
         <p>
             How to get all the scheduled tasks whose time is in the future?
         </p>
-        <pre>            navigator.serviceWorker.getRegistration().then(function(registration) {
-                registration.taskScheduler.getPendingTasks().then(function(tasks) {
-                    alert("There are " + tasks.length + " tasks set.");
-                }, function(error) {
-                    alert("An error occurred getting the scheduled tasks.");
-                });
-            }, function(error) {
-                alert("An error occurred getting the scheduled tasks.");
-            });
+        <pre>    navigator.serviceWorker.getRegistration().then(function(registration) {
+        registration.taskScheduler.getPendingTasks().then(function(tasks) {
+            alert("There are " + tasks.length + " tasks set.");
+        }, function(error) {
+            alert("An error occurred getting the scheduled tasks.");
+        });
+    }, function(error) {
+        alert("An error occurred getting the scheduled tasks.");
+    });
         </pre>
 
         <p>
             How to remove a scheduled task?
         </p>
-        <pre>            navigator.serviceWorker.getRegistration().then(function(registration) {
-                var request = registration.taskScheduler.remove(id).then(function() {
-                    alert("Task removed");
-                    }, function(error) {
-                        alert("Sorry, can't remove the task.");
-                    });
-                }, function(error) {
-                    alert("An error occurred getting the scheduled tasks.");
-                });
+        <pre>    navigator.serviceWorker.getRegistration().then(function(registration) {
+        var request = registration.taskScheduler.remove(id).then(function() {
+                alert("Task removed");
+            }, function(error) {
+                alert("Sorry, can't remove the task.");
+            });
+    }, function(error) {
+        alert("An error occurred getting the scheduled tasks.");
+    });
         </pre>
     </div>
 
@@ -323,10 +323,9 @@
         The Service Worker specification defines a <code><a href="#serviceworkerregistration">ServiceWorkerRegistration</a></code> interface
         <a href="#refsSERVICE-WORKERS">[SERVICE-WORKERS]</a>, which this specification extends.
     </p>
-    <pre class="idl">        partial interface <a href="#serviceworkerregistration">ServiceWorkerRegistration</a> {
-            readonly attribute <a href="#taskscheduler">TaskScheduler</a> <a href="#serviceworkerregistration-taskscheduler" title="ServiceWorkerRegistration-taskScheduler">taskScheduler</a>;
-        }
-    </pre>
+    <pre class="idl">partial interface <a href="#serviceworkerregistration">ServiceWorkerRegistration</a> {
+    readonly attribute <a href="#taskscheduler">TaskScheduler</a> <a href="#serviceworkerregistration-taskscheduler" title="ServiceWorkerRegistration-taskScheduler">taskScheduler</a>;
+}</pre>
     <p>
         The <dfn id="serviceworkerregistration-taskscheduler" title="ServiceWorkerRegistration-taskScheduler"><code>taskScheduler</code></dfn> attribute provides the developer access to a
         <code><a href="#taskscheduler">TaskScheduler</a></code>.
@@ -339,12 +338,11 @@
         application specific, so there is no way to see the tasks scheduled by other applications nor to modify them.
         Developers should set an <a href="#ontask-event-handler">ontask</a> event handler in the associated <a href="#service-worker">service worker</a> to listen for the <code title="task-system-message">task</code> event when scheduled tasks should be executed.
     </p>
-    <pre class="idl">        interface <dfn id="taskscheduler">TaskScheduler</dfn> {
-            <a href="#promise">Promise</a> <a href="#taskscheduler-getpendingtasks" title="TaskScheduler-getPendingTasks">getPendingTasks</a>();
-            <a href="#promise">Promise</a> <a href="#taskscheduler-add" title="TaskScheduler-add">add</a>(DOMTimeStamp <var title="">time</var>, optional any <var title="">data</var>);
-            <a href="#promise">Promise</a> <a href="#taskscheduler-remove" title="TaskScheduler-remove">remove</a>(DOMString <var title="">taskId</var>);
-        };
-    </pre>
+    <pre class="idl">interface <dfn id="taskscheduler">TaskScheduler</dfn> {
+    <a href="#promise">Promise</a> <a href="#taskscheduler-getpendingtasks" title="TaskScheduler-getPendingTasks">getPendingTasks</a>();
+    <a href="#promise">Promise</a> <a href="#taskscheduler-add" title="TaskScheduler-add">add</a>(DOMTimeStamp <var title="">time</var>, optional any <var title="">data</var>);
+    <a href="#promise">Promise</a> <a href="#taskscheduler-remove" title="TaskScheduler-remove">remove</a>(DOMString <var title="">taskId</var>);
+};</pre>
     <p>
         When invoked, the <dfn id="taskscheduler-getpendingtasks" title="TaskScheduler-getPendingTasks"><code>getPendingTasks()</code></dfn> method <em class="ct">must</em> run the following steps:
     </p>
@@ -475,12 +473,11 @@
     <p>
         <span>The <code><a href="#scheduledtask">ScheduledTask</a></code> interface captures the properties of a scheduled task.</span>
     </p>
-    <pre class="idl">        <span>interface <dfn id="scheduledtask">ScheduledTask</dfn> {
-            readonly attribute DOMString <a href="#scheduledtask-id" title="ScheduledTask-id">id</a>;
-            readonly attribute DOMTimeStamp <a href="#scheduledtask-time" title="ScheduledTask-time">time</a>;
-            readonly attribute any <a href="#scheduledtask-data" title="ScheduledTask-data">data</a>;
-        };</span>
-    </pre>
+    <pre class="idl"><span>interface <dfn id="scheduledtask">ScheduledTask</dfn> {
+    readonly attribute DOMString <a href="#scheduledtask-id" title="ScheduledTask-id">id</a>;
+    readonly attribute DOMTimeStamp <a href="#scheduledtask-time" title="ScheduledTask-time">time</a>;
+    readonly attribute any <a href="#scheduledtask-data" title="ScheduledTask-data">data</a>;
+};</span></pre>
     <p>
         The <dfn id="scheduledtask-id" title="ScheduledTask-id"><code>id</code></dfn> attribute returns an identifier for the given
         <code><a href="#scheduledtask">ScheduledTask</a></code> object that is unique within the origin. An implementation <em class="ct">must</em> maintain
@@ -501,9 +498,9 @@
         The Service Worker specification defines a <code><a href="#serviceworkerglobalscope">ServiceWorkerGlobalScope</a></code> interface
         <a href="#refsSERVICE-WORKERS">[SERVICE-WORKERS]</a>, which this specification extends.
     </p>
-    <pre class="idl">        partial interface <a class="idlInterfaceID" href="#serviceworkerglobalscope">ServiceWorkerGlobalScope</a> {
-        attribute EventHandler <span title="task-system-message"><a href="#ontask-event-handler">ontask</a></span>;
-    };</pre>
+    <pre class="idl">partial interface <a class="idlInterfaceID" href="#serviceworkerglobalscope">ServiceWorkerGlobalScope</a> {
+    attribute EventHandler <span title="task-system-message"><a href="#ontask-event-handler">ontask</a></span>;
+};</pre>
 
     <h3 id="event-handler"><span class="secno">6.1 </span>
         Event Handler
@@ -528,10 +525,9 @@
     </h3>
 
     <p> The <code><a href="#taskevent">TaskEvent</a></code> interface represents a scheduled task. </p>
-    <pre class="idl">        interface <dfn id="taskevent">TaskEvent</dfn> : <a href="#extendableevent">ExtendableEvent</a> {
-            readonly attribute <a href="#scheduledtask" title="ScheduledTask">ScheduledTask</a> <a href="#scheduledtask" title="ScheduledTask">task</a>;
-        };
-    </pre>
+    <pre class="idl">interface <dfn id="taskevent">TaskEvent</dfn> : <a href="#extendableevent">ExtendableEvent</a> {
+    readonly attribute <a href="#scheduledtask" title="ScheduledTask">ScheduledTask</a> <a href="#scheduledtask" title="ScheduledTask">task</a>;
+};</pre>
     <p>
         <h3 id="firing-task-event-to-service-worker"><span class="secno">6.3 </span>
             Firing <code>task</code> event to service worker
