Change the org and the date of the former editor.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         Task Scheduler API Specification
     
         </h1>
-        <h2 class="no-num no-toc" id="editor-draft-—-10-october-2014">
-            Editor Draft — 10 October 2014
+        <h2 class="no-num no-toc" id="editor-draft-—-13-october-2014">
+            Editor Draft — 13 October 2014
         </h2>
         <dl>
             <dt>
@@ -87,8 +87,8 @@
                 Former Editors:
             </dt>
             <dd class="vcard">
-                <span class="fn">Christophe Dumez</span>, <span class="org"><a href="https://www.apple.com/">Apple
-                Inc.</a></span>
+                <span class="fn">Christophe Dumez</span>, <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics,
+                Co., Ltd</a></span> (Until mid-August 2014)
             </dd>
         </dl>
         <div class="w3conly">
@@ -111,7 +111,7 @@
         Table of Contents
     </h2>
 <!--begin-toc-->
-<ul class="toc">
+<ol class="toc">
  <li><a href="#introduction"><span class="secno">1 </span>
         Introduction
     </a></li>
@@ -127,7 +127,7 @@
  <li><a href="#task-scheduler-api"><span class="secno">5 </span>
         Task Scheduler API
     </a>
-  <ul class="toc">
+  <ol class="toc">
    <li><a href="#interface-serviceworkerregistration"><span class="secno">5.1 </span>
         Interface <code title="">ServiceWorkerRegistration</code>
     </a></li>
@@ -136,11 +136,11 @@
     </a></li>
    <li><a href="#interface-scheduledtask"><span class="secno">5.3 </span>
         <span>Interface <code title="">ScheduledTask</code></span>
-    </a></ul></li>
+    </a></ol></li>
  <li><a href="#events"><span class="secno">6 </span>
         Events
     </a>
-  <ul class="toc">
+  <ol class="toc">
    <li><a href="#event-handler"><span class="secno">6.1 </span>
         Event Handler
     </a></li>
@@ -149,13 +149,13 @@
     </a></li>
    <li><a href="#firing-task-event-to-service-worker"><span class="secno">6.3 </span>
             Firing <code>task</code> event to service worker
-        </a></ul></li>
+        </a></ol></li>
  <li><a class="no-num" href="#references">
         References
     </a></li>
  <li><a class="no-num" href="#acknowledgments">
         Acknowledgments
-    </a></ul>
+    </a></ol>
 <!--end-toc-->
     <h2 id="introduction"><span class="secno">1 </span>
         Introduction
