--- a/index.src.html
+++ b/index.src.html
@@ -88,8 +88,8 @@
                 Former Editors:
             </dt>
             <dd class="vcard">
-                <span class="fn">Christophe Dumez</span>, <span class="org"><a href="https://www.apple.com/">Apple
-                Inc.</a></span>
+                <span class="fn">Christophe Dumez</span>, <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics,
+                Co., Ltd</a></span> (Until mid-August 2014)
             </dd>
         </dl>
         <div class="w3conly">
