Update the former editor description

--- a/index.src.html
+++ b/index.src.html
@@ -88,8 +88,7 @@
                 Former Editors:
             </dt>
             <dd class="vcard">
-                <span class="fn">Christophe Dumez</span>, <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics,
-                Co., Ltd</a></span> (Until mid-August 2014)
+                <span class="fn">Christophe Dumez</span>, representing <span class="org"><a href="http://www.intel.com/">Intel</a></span> and <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics</a></span> (Until January 2013 and mid-August 2014, respectively)
             </dd>
         </dl>
         <div class="w3conly">
