--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           <p>
             <strong>
               Work on this document has been discontinued.
-            </strong>
+            </strong>.
+            See <a href="https://github.com/sysapps/web-alarms">github repo</a> for historical information.
           </p>
         </section>
       </body>
